skrive ferdig mapper og endre endepunkt